Start of HTTP/3 support

--- a/Makefile.am
+++ b/Makefile.am
@@ -1264,6 +1264,8 @@ imap_httpd_SOURCES = \
 	imap/http_dblookup.c \
 	imap/http_h2.c \
 	imap/http_h2.h \
+	imap/http_h3.c \
+	imap/http_h3.h \
 	imap/http_ischedule.c \
 	imap/http_prometheus.c \
 	imap/http_proxy.c \
